# blastgeolib

./: .gitignore  CMakeLists.txt  README.md
example/: BlastGeoApp.cpp  CMakeLists.txt
include/blastgeolib/: MeshSerializer.h  OBJSerializer.h  PolygonMesh.h  STLSerializer.h  Utils.h
src/: MeshSerializer.cpp  OBJSerializer.cpp  PolygonMesh.cpp  STLSerializer.cpp  Utils.cpp  Utils.h
tests/: test_main.cpp
